[gd_scene load_steps=2 format=3 uid="uid://divn24yls8ri5"]

[ext_resource type="Script" path="res://addons/card_engine/editor/new_card_window.gd" id="1_oibe0"]

[node name="NewCardWindow" type="ConfirmationDialog"]
initial_position = 2
title = "New Card"
size = Vector2i(518, 123)
script = ExtResource("1_oibe0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 510.0
offset_bottom = 74.0

[node name="GridContainer" type="GridContainer" parent="HBoxContainer"]
layout_mode = 2
columns = 3

[node name="Label" type="Label" parent="HBoxContainer/GridContainer"]
layout_mode = 2
text = "Set:"

[node name="Set" type="LineEdit" parent="HBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
editable = false

[node name="ChangeSetButton" type="Button" parent="HBoxContainer/GridContainer"]
layout_mode = 2
text = "Change"

[node name="Label2" type="Label" parent="HBoxContainer/GridContainer"]
layout_mode = 2
text = "Card Name:"

[node name="Name" type="LineEdit" parent="HBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[connection signal="canceled" from="." to="." method="_on_canceled"]
[connection signal="confirmed" from="." to="." method="_on_confirmed"]
[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="HBoxContainer/GridContainer/ChangeSetButton" to="." method="_on_change_set_button_pressed"]
[connection signal="text_submitted" from="HBoxContainer/GridContainer/Name" to="." method="_on_name_text_submitted"]
